@@ -793,6 +793,7 @@ get_exclude_patterns <- function()
         }
         setwd(Tdir)
         ## Fix permissions for all files to be at least 644, and dirs 755
+        ## Not restricted by umask.
         if (!WINDOWS) .Internal(dirchmod(pkgname))
         ## Add build stamp to the DESCRIPTION file.
         add_build_stamp_to_description_file(file.path(pkgname, "DESCRIPTION"))
